fix: docker & swagger
